# odh-runbooks

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RUNBOOK_LIBRARY.md  SECURITY.md  WIZARD_METADATA_TODO.md  cli.py  mcp_server.py  pyproject.toml
.claude/skills/: odh.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: new-runbook.md  runbook-bug.md
generator/: generator.py
runbooks/automl/: run-automl-pipeline.yaml
runbooks/autorag/: run-autorag-pipeline.yaml
runbooks/cluster/: configure-cluster-settings.yaml  configure-culler.yaml  configure-group-settings.yaml  configure-storage-classes.yaml  create-connection-type.yaml  create-hardware-profile.yaml  enable-codeflare.yaml  enable-feature-store.yaml  enable-kserve.yaml  enable-model-registry.yaml  enable-pipelines.yaml  enable-training-operator.yaml  enable-trustyai.yaml  full-stack-setup.yaml
runbooks/dependencies/: provision-minio.yaml  provision-pipeline-server.yaml  provision-postgresql-pgvector.yaml  provision-s3-connection.yaml
runbooks/distributed-workloads/: submit-ray-job.yaml
runbooks/evalhub/: create-evaluation-run.yaml
runbooks/genai/: enable-chat-playground.yaml
runbooks/gpu/: add-gpu-node-ocm.yaml  install-gpu-operator.yaml  verify-gpu-available.yaml
runbooks/mlflow/: create-llm-trace.yaml  enable-mlflow.yaml  log-training-run.yaml  manage-prompts.yaml  promote-model-to-production.yaml  (+2 more)
runner/: __init__.py  actions.py  agentic.py  checks.py  cluster.py  dependency_map.py  executor.py  resolver.py  schema.py  start.py  wizard.py
(+33 files in other folders)
